Serving dist files via app.js

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "dependencies": {
     "opentok": "~2.2.4",
     "connect": "~3.3.3",
-    "express": "~4.10.3"
+    "express": "~4.10.3",
+    "body-parser": "~1.9.3"
   },
   "devDependencies": {
     "browserify": "~3.14.1",
