--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Caller-callee find and connect semantics for WebRTC",
   "main": "index.js",
   "scripts": {
-    "test": "tap test/test-*.js"
+    "test": "tap test/test-*.js",
+    "postinstall": "NAMESPACE=yammer node_modules/.bin/grunt build-project"
   },
   "repository": {
     "type": "git",
