--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "tap test/test-*.js",
-    "postinstall": "NAMESPACE=yammer node_modules/.bin/grunt build-project"
+    "postinstall": "npm run build:moz",
+    "build:yammer": "NAMESPACE=yammer node_modules/.bin/grunt build-project",
+    "build:moz": "NAMESPACE=mozilla node_modules/.bin/grunt build-project",
+    "build:hello": "NAMESPACE=hello node_modules/.bin/grunt build-project"
   },
   "repository": {
     "type": "git",
