--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "body-parser": "~1.9.3",
     "socket.io": "~1.2.1",
     "socket.io-client": "~1.2.1",
-    "cors": "~2.5.2"
-  },
-  "devDependencies": {
+    "cors": "~2.5.2",
     "browserify": "~3.14.1",
     "grunt-browserify": "~1.3.0",
     "grunt-contrib-watch": "~0.5.3",
@@ -51,5 +49,7 @@
     "grunt-nodemon": "~0.3.0",
     "grunt-concurrent": "~1.0.0",
     "grunt-cli": "~0.1.13"
+  },
+  "devDependencies": {
   }
 }
